--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github_username:  yangleduo
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-slate
 gems:
   - jekyll-feed
 exclude:
